--- a/index.html
+++ b/index.html
@@ -8,22 +8,38 @@
     <link rel="stylesheet" href="assets/css/reset.css" />
     <link rel="stylesheet" href="assets/css/style.css" />
     <link
-      href="https://fonts.googleapis.com/css?family=Shadows+Into+Light+Two&display=swap"
+      href="https://fonts.googleapis.com/css?family=Montserrat|Shadows+Into+Light+Two&display=swap"
       rel="stylesheet"
     />
-    <script src="assets/javascript/game.js"
+    <script src="assets/javascript/game.js"></script>
+    <script src="assets/javascript/djsymbols.js"></script>
   </head>
 
   <body>
-    <div class="head">
+    <div class="header">
       <h1>Word Guess Game</h1>
     </div>
     <div class="container">
-      <div class="title">
-        <h2>&nbsp;Guess that<span class="fancy"> EDM DJ!&nbsp;</span></h2>
-      </div>
-      <div class="instructions">Press any key to start!</div>
       <br />
+      <div class="pic">
+        <span id="img"
+          ><img class="image" src="assets/images/logo.png" alt="logo picture"
+        /></span>
+      </div>
+      <br />
+      <div class="instructions">Press any key to start!</div>
+      <div class="container2">
+        <div class="center"></div>
+        <div class="guessedwords"><span id="word"></span></div>
+        <div class="main">
+          <div>
+            <div>Wins: <span id="wins"></span></div>
+            <div>Number of Guesses Remaining: <span id="guesses"></span></div>
+            <div>Letters Used: <span id="letters"></span></div>
+            <div class="warn">&nbsp;<span id="warning"></span></div>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
