added the javascript code and made more edits to the CSS styling

--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
     <div class="header">
       <h1>Word Guess Game</h1>
     </div>
+    <br />
+    <hr id="line" />
     <div class="container">
+      <br />
       <br />
       <div class="pic">
         <span id="img"
